[package]
name = "diesel_json"
version = "0.2.1"
authors = ["Pēteris Pakalns <peterispakalns@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Json wrapper type for JsonB data handling in diesel"
repository = "https://github.com/PPakalns/diesel_json"
homepage = "https://github.com/PPakalns/diesel_json"
readme = "README.md"
keywords = ["jsonb", "json", "diesel"]
categories = ["database", "encoding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = ">=0.8.0, <2.0" }
diesel = { version = "2.0", features = ["postgres", "serde_json"], default-features = false }


[dev-dependencies]
diesel_migrations = "2.0"
dotenv = "0.15.0"
